update initial push + DTC not working

--- a/data_exploration/basemodel.ipynb
+++ b/data_exploration/basemodel.ipynb
@@ -7,30 +7,30 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "# import seaborn as sns"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-14T12:58:45.730353600Z",
-     "start_time": "2023-11-14T12:58:45.727333300Z"
+     "end_time": "2023-12-01T15:29:34.825653300Z",
+     "start_time": "2023-12-01T15:29:33.973327600Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "#load the compas score csv\n",
-    "compas_score_full = pd.read_csv('compas-scores-two-years.csv')\n",
+    "compas_score_full = pd.read_csv('..\\\\data\\\\compas-scores-two-years.csv')\n",
     "# print(compas_score_full.columns)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-14T12:58:45.781711300Z",
-     "start_time": "2023-11-14T12:58:45.731356Z"
+     "end_time": "2023-12-01T15:30:36.084124800Z",
+     "start_time": "2023-12-01T15:30:35.986389700Z"
     }
    }
   },
