experimental setup initiated

--- a/Main_DT.ipynb
+++ b/Main_DT.ipynb
@@ -282,20 +282,17 @@
     }
    ],
    "source": [
-    "#Test instances on normal and modified LIME\n",
+    "# Test instances on normal and modified LIME\n",
     "# investigate difference of mean and standard deviation of feature values\n",
     "\n",
     "real_lime = modelBuilder.explain(X_train, X_cols)\n",
-    "\n",
-    "print()\n",
+    "# TODO: before runnng this comment out the printing of the decision tree\n",
     "for instance in X_test:\n",
     "    exp_inst_dt = explainer_lime.explain_instance(instance, model.predict_proba, num_features=5)\n",
-    "\n",
     "    exp_inst = real_lime.explain_instance(instance, model.predict_proba, num_features=5)\n",
-    "\n",
-    "exp_inst_dt.show_in_notebook()\n",
-    "    # get feature importances for each of the features\n",
-    "    # compute the difference of the features (abs/mean)"
+    "    # TODO: get feature importances for each of the features\n",
+    "    # TODO: compute the difference of the features (abs/mean)\n",
+    "    # TODO: plot summary of difference"
    ],
    "metadata": {
     "collapsed": false,
@@ -309,7 +306,11 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# TODO: before runnng this comment in the printing of the decision tree\n",
+    "exp_inst_dt.show_in_notebook() # TODO: example visualization\n",
+    "exp_inst.show_in_notebook()\n"
+   ],
    "metadata": {
     "collapsed": false
    }
