--- a/Experiments_NB.ipynb
+++ b/Experiments_NB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-22T16:37:22.299905200Z",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-22T16:37:22.471409300Z",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-22T16:37:23.070612100Z",
@@ -47,7 +47,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Tabea Heusel\\PycharmProjects\\Lime-Enhancements\\data_prep.py:17: SettingWithCopyWarning: \n",
+      "c:\\Users\\Asus\\vscodeprojects\\Lime-Enhancements\\data_prep.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-22T16:37:23.070612100Z",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-22T16:37:23.241154400Z",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-22T16:37:23.242153100Z",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-22T16:37:23.458580Z",
@@ -181,22 +181,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "scaler = MinMaxScaler()\n",
-    "scaled_std = scaler.fit_transform(std_per_variable.values.reshape(-1, 1))\n",
-    "\n",
-    "scaled_std_df = pd.DataFrame({'Feature': std_per_variable.index, 'Scaled Standard Deviation': scaled_std.flatten()})\n",
-    "scaled_std_df = scaled_std_df.sort_values(by='Scaled Standard Deviation', ascending=False)\n",
-    "\n",
-    "print(\"Sorted Scaled Standard Deviation:\")\n",
-    "print(scaled_std_df)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-22T16:37:24.209100100Z",
@@ -217,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-22T16:37:25.997673400Z",
@@ -295,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-22T16:37:26.704717900Z",
@@ -309,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-22T16:37:28.410812300Z",
@@ -351,7 +337,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def compare_objects(exp1, exp2, previous_df=None):\n",
+    "    # return explainer object as list\n",
+    "    exp1 = exp1.as_list()\n",
+    "    exp2 = exp2.as_list()\n",
+    "\n",
+    "    # turn into Pandas DataFrames\n",
+    "    df1 = pd.DataFrame(exp1, columns=['feature', 'value'])\n",
+    "    df2 = pd.DataFrame(exp2, columns=['feature', 'value'])\n",
+    "\n",
+    "    # Merge DataFrames on the 'feature' column (outer join to handle non-matching strings)\n",
+    "    merged_df = pd.merge(df1, df2, on='feature', how='outer', suffixes=('_df1', '_df2'))\n",
+    "\n",
+    "    # Fill NaN values with 0 for features that are present in only one explanation\n",
+    "    merged_df['value_df1'].fillna(0, inplace=True)\n",
+    "    merged_df['value_df2'].fillna(0, inplace=True)\n",
+    "\n",
+    "    # calculate absolute difference\n",
+    "    merged_df['difference'] = merged_df['value_df1'] - merged_df['value_df2']\n",
+    "\n",
+    "    return merged_df[['feature', 'difference']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-22T16:37:31.661364Z",
@@ -363,31 +379,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5000, 5)\n",
-      "(5000,)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Unknown label type: (array([0.        , 0.25      , 0.33333333, 0.44444444, 0.5       ,\n       0.55555556, 0.625     , 0.66666667, 0.71428571, 0.75      ,\n       0.8       , 0.83333333, 0.875     , 1.        ]),)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[38], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m exp_inst \u001B[38;5;241m=\u001B[39m \u001B[43mexplainer_lime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mexplain_instance\u001B[49m\u001B[43m(\u001B[49m\u001B[43mX_test\u001B[49m\u001B[43m[\u001B[49m\u001B[43minstance_no\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mmodel\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpredict_proba\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnum_features\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m5\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32m~\\PycharmProjects\\Lime-Enhancements\\NB_lime\\lime_tabular.py:460\u001B[0m, in \u001B[0;36mLimeTabularExplainer_NB.explain_instance\u001B[1;34m(self, data_row, predict_fn, labels, top_labels, num_features, num_samples, distance_metric, model_regressor, sampling_method)\u001B[0m\n\u001B[0;32m    455\u001B[0m     labels \u001B[38;5;241m=\u001B[39m [\u001B[38;5;241m0\u001B[39m]\n\u001B[0;32m    456\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m label \u001B[38;5;129;01min\u001B[39;00m labels:\n\u001B[0;32m    457\u001B[0m     (ret_exp\u001B[38;5;241m.\u001B[39mintercept[label],\n\u001B[0;32m    458\u001B[0m      ret_exp\u001B[38;5;241m.\u001B[39mlocal_exp[label],\n\u001B[0;32m    459\u001B[0m      ret_exp\u001B[38;5;241m.\u001B[39mscore[label],\n\u001B[1;32m--> 460\u001B[0m      ret_exp\u001B[38;5;241m.\u001B[39mlocal_pred[label]) \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbase\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mexplain_instance_with_data\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    461\u001B[0m \u001B[43m            \u001B[49m\u001B[43mscaled_data\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    462\u001B[0m \u001B[43m            \u001B[49m\u001B[43myss\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    463\u001B[0m \u001B[43m            \u001B[49m\u001B[43mdistances\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    464\u001B[0m \u001B[43m            \u001B[49m\u001B[43mlabel\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    465\u001B[0m \u001B[43m            \u001B[49m\u001B[43mnum_features\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    466\u001B[0m \u001B[43m            \u001B[49m\u001B[43mmodel_regressor\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mmodel_regressor\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    467\u001B[0m \u001B[43m            \u001B[49m\u001B[43mfeature_selection\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfeature_selection\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    469\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmode \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mregression\u001B[39m\u001B[38;5;124m\"\u001B[39m:\n\u001B[0;32m    470\u001B[0m     ret_exp\u001B[38;5;241m.\u001B[39mintercept[\u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m=\u001B[39m ret_exp\u001B[38;5;241m.\u001B[39mintercept[\u001B[38;5;241m0\u001B[39m]\n",
-      "File \u001B[1;32m~\\PycharmProjects\\Lime-Enhancements\\NB_lime\\lime_base.py:197\u001B[0m, in \u001B[0;36mLimeBase.explain_instance_with_data\u001B[1;34m(self, neighborhood_data, neighborhood_labels, distances, label, num_features, feature_selection, model_regressor)\u001B[0m\n\u001B[0;32m    195\u001B[0m \u001B[38;5;28mprint\u001B[39m(neighborhood_data[:, used_features]\u001B[38;5;241m.\u001B[39mshape)\n\u001B[0;32m    196\u001B[0m \u001B[38;5;28mprint\u001B[39m(labels_column\u001B[38;5;241m.\u001B[39mshape)\n\u001B[1;32m--> 197\u001B[0m \u001B[43measy_model\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfit\u001B[49m\u001B[43m(\u001B[49m\u001B[43mneighborhood_data\u001B[49m\u001B[43m[\u001B[49m\u001B[43m:\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mused_features\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    198\u001B[0m \u001B[43m               \u001B[49m\u001B[43mlabels_column\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    199\u001B[0m prediction_score \u001B[38;5;241m=\u001B[39m easy_model\u001B[38;5;241m.\u001B[39mscore(\n\u001B[0;32m    200\u001B[0m     neighborhood_data[:, used_features],\n\u001B[0;32m    201\u001B[0m     labels_column, sample_weight\u001B[38;5;241m=\u001B[39mweights)\n\u001B[0;32m    203\u001B[0m local_pred \u001B[38;5;241m=\u001B[39m easy_model\u001B[38;5;241m.\u001B[39mpredict(neighborhood_data[\u001B[38;5;241m0\u001B[39m, used_features]\u001B[38;5;241m.\u001B[39mreshape(\u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m))\n",
-      "File \u001B[1;32m~\\PycharmProjects\\Lime-Enhancements\\venv\\lib\\site-packages\\sklearn\\base.py:1152\u001B[0m, in \u001B[0;36m_fit_context.<locals>.decorator.<locals>.wrapper\u001B[1;34m(estimator, *args, **kwargs)\u001B[0m\n\u001B[0;32m   1145\u001B[0m     estimator\u001B[38;5;241m.\u001B[39m_validate_params()\n\u001B[0;32m   1147\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m config_context(\n\u001B[0;32m   1148\u001B[0m     skip_parameter_validation\u001B[38;5;241m=\u001B[39m(\n\u001B[0;32m   1149\u001B[0m         prefer_skip_nested_validation \u001B[38;5;129;01mor\u001B[39;00m global_skip_validation\n\u001B[0;32m   1150\u001B[0m     )\n\u001B[0;32m   1151\u001B[0m ):\n\u001B[1;32m-> 1152\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m fit_method(estimator, \u001B[38;5;241m*\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n",
-      "File \u001B[1;32m~\\PycharmProjects\\Lime-Enhancements\\venv\\lib\\site-packages\\sklearn\\naive_bayes.py:263\u001B[0m, in \u001B[0;36mGaussianNB.fit\u001B[1;34m(self, X, y, sample_weight)\u001B[0m\n\u001B[0;32m    240\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"Fit Gaussian Naive Bayes according to X, y.\u001B[39;00m\n\u001B[0;32m    241\u001B[0m \n\u001B[0;32m    242\u001B[0m \u001B[38;5;124;03mParameters\u001B[39;00m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    260\u001B[0m \u001B[38;5;124;03m    Returns the instance itself.\u001B[39;00m\n\u001B[0;32m    261\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m    262\u001B[0m y \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_validate_data(y\u001B[38;5;241m=\u001B[39my)\n\u001B[1;32m--> 263\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_partial_fit\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    264\u001B[0m \u001B[43m    \u001B[49m\u001B[43mX\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43my\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43munique\u001B[49m\u001B[43m(\u001B[49m\u001B[43my\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m_refit\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msample_weight\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43msample_weight\u001B[49m\n\u001B[0;32m    265\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32m~\\PycharmProjects\\Lime-Enhancements\\venv\\lib\\site-packages\\sklearn\\naive_bayes.py:422\u001B[0m, in \u001B[0;36mGaussianNB._partial_fit\u001B[1;34m(self, X, y, classes, _refit, sample_weight)\u001B[0m\n\u001B[0;32m    419\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m _refit:\n\u001B[0;32m    420\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mclasses_ \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[1;32m--> 422\u001B[0m first_call \u001B[38;5;241m=\u001B[39m \u001B[43m_check_partial_fit_first_call\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mclasses\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    423\u001B[0m X, y \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_validate_data(X, y, reset\u001B[38;5;241m=\u001B[39mfirst_call)\n\u001B[0;32m    424\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m sample_weight \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n",
-      "File \u001B[1;32m~\\PycharmProjects\\Lime-Enhancements\\venv\\lib\\site-packages\\sklearn\\utils\\multiclass.py:422\u001B[0m, in \u001B[0;36m_check_partial_fit_first_call\u001B[1;34m(clf, classes)\u001B[0m\n\u001B[0;32m    415\u001B[0m             \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[0;32m    416\u001B[0m                 \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m`classes=\u001B[39m\u001B[38;5;132;01m%r\u001B[39;00m\u001B[38;5;124m` is not the same as on last call \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    417\u001B[0m                 \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mto partial_fit, was: \u001B[39m\u001B[38;5;132;01m%r\u001B[39;00m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m%\u001B[39m (classes, clf\u001B[38;5;241m.\u001B[39mclasses_)\n\u001B[0;32m    418\u001B[0m             )\n\u001B[0;32m    420\u001B[0m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m    421\u001B[0m         \u001B[38;5;66;03m# This is the first call to partial_fit\u001B[39;00m\n\u001B[1;32m--> 422\u001B[0m         clf\u001B[38;5;241m.\u001B[39mclasses_ \u001B[38;5;241m=\u001B[39m \u001B[43munique_labels\u001B[49m\u001B[43m(\u001B[49m\u001B[43mclasses\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    423\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m\n\u001B[0;32m    425\u001B[0m \u001B[38;5;66;03m# classes is None and clf.classes_ has already previously been set:\u001B[39;00m\n\u001B[0;32m    426\u001B[0m \u001B[38;5;66;03m# nothing to do\u001B[39;00m\n",
-      "File \u001B[1;32m~\\PycharmProjects\\Lime-Enhancements\\venv\\lib\\site-packages\\sklearn\\utils\\multiclass.py:105\u001B[0m, in \u001B[0;36munique_labels\u001B[1;34m(*ys)\u001B[0m\n\u001B[0;32m    103\u001B[0m _unique_labels \u001B[38;5;241m=\u001B[39m _FN_UNIQUE_LABELS\u001B[38;5;241m.\u001B[39mget(label_type, \u001B[38;5;28;01mNone\u001B[39;00m)\n\u001B[0;32m    104\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m _unique_labels:\n\u001B[1;32m--> 105\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mUnknown label type: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m%\u001B[39m \u001B[38;5;28mrepr\u001B[39m(ys))\n\u001B[0;32m    107\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m is_array_api_compliant:\n\u001B[0;32m    108\u001B[0m     \u001B[38;5;66;03m# array_api does not allow for mixed dtypes\u001B[39;00m\n\u001B[0;32m    109\u001B[0m     unique_ys \u001B[38;5;241m=\u001B[39m xp\u001B[38;5;241m.\u001B[39mconcat([_unique_labels(y) \u001B[38;5;28;01mfor\u001B[39;00m y \u001B[38;5;129;01min\u001B[39;00m ys])\n",
-      "\u001B[1;31mValueError\u001B[0m: Unknown label type: (array([0.        , 0.25      , 0.33333333, 0.44444444, 0.5       ,\n       0.55555556, 0.625     , 0.66666667, 0.71428571, 0.75      ,\n       0.8       , 0.83333333, 0.875     , 1.        ]),)"
+      "[[1. 1. 1. 1. 1.]\n",
+      " [0. 0. 1. 1. 0.]\n",
+      " [0. 1. 0. 1. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0.]]\n",
+      "[0 1 1 1 1 1 1 1 1 1 1 0 1 0 0 1 1 1 0 1 0 1 1 1 1 1 1 1 1 1 1 1 1 1 0 1 1\n",
+      " 1 1 1 1 1 1 1 0 1 1 1 1 1 1 0 1 1 1 1 1 0 1 0 1 0 1 1 1 0 1 0 1 1 1 0 1 1\n",
+      " 0 0 1 1 1 1 1 0 1 1 1 0 0 1 1 1 0 1 1 0 1 0 0 1 1 0]\n",
+      "                         feature  difference\n",
+      "0            priors_count > 4.00    1.355602\n",
+      "1          length_of_stay > 6.00    0.163014\n",
+      "2      c_charge_degree_F <= 0.00    0.041502\n",
+      "3  0.00 < two_year_recid <= 1.00    0.077809\n",
+      "4            0.00 < race <= 1.00    0.069315\n",
+      "5             sex_Female <= 0.00   -0.017835\n"
      ]
     }
    ],
    "source": [
-    "exp_inst = explainer_lime.explain_instance(X_test[instance_no], model.predict_proba, num_features=5)"
+    "real_lime = modelBuilder.explain(X_train, X_cols)\n",
+    "#exp_inst = explainer_lime.explain_instance(X_test[instance_no], model.predict_proba, num_features=5)\n",
+    "exp_inst_dt = explainer_lime.explain_instance(X_test[0], model.predict_proba, num_features=5)\n",
+    "exp_inst = real_lime.explain_instance(X_test[0], model.predict_proba, num_features=5)\n",
+    "df  = compare_objects(exp_inst_dt,exp_inst)\n",
+    "print(df)"
    ]
   },
   {
